fix: draft for fixing estimate_job_cost and get_usages
